[package]
name = "primitive-enum-derive"
version = "0.3.1"
authors = ["Rail Khusnutdinov <rail@33.run>"]
description = "macros for get primitive enum from complex"
keywords = ["enum"]
categories = []
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/primitive-enum/"
documentation = "https://docs.rs/primitive-enum-derive/"
repository = "https://github.com/libfunc/primitive-enum/"
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2", features = ["full"] }
