[package]
name = "primitive-enum"
version = "0.1.0"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
description = "macros for get primitive enum from complex"
keywords = ["enum"]
categories = []
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/primitive-enum/"
documentation = "https://docs.rs/primitive-enum/"
repository = "https://github.com/libfunc/primitive-enum/"
readme = "README.md"
edition = "2021"

[lib]
name = "primitive_enum"
path = "src/lib.rs"

[dependencies.primitive-enum-derive]
path = "../primitive-enum-derive"
